# my-website

./: .gitignore  README.md
.github/workflows/: ci.yml  deploy.yml
infra/bootstrap/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/site/: acm.tf  backend.tf  cloudfront-rewrite.js  cloudfront.tf  main.tf  outputs.tf  providers.tf  route53.tf  s3.tf  variables.tf
scripts/: generate_og_image.py
site/: pelicanconf.py  publishconf.py  pyproject.toml
site/content/pages/: 404.md  index.md  projects.md  resume.md  robots.md
site/theme/static/css/: style.css
site/theme/templates/: base.html  page.html
