[project]
name = "rolando-website"
version = "0.1.0"
description = "Static site for rolando.solstud.io built with Pelican"
requires-python = ">=3.12"
dependencies = [
    "pelican>=4.9.1",
    "markdown>=3.6",
    "pelican-sitemap>=1.0.4",
    "pelican-jinja2content>=1.0.1",
]

[dependency-groups]
# Tooling needed to *build* the site (generate the og:image PNG), but not at
# runtime of the published artifact. CI installs this with `uv sync --group build`.
build = [
    "pillow>=10.0",
]

[tool.uv]
package = false
